Bug 8182 - Ocotea board: ntpd complains that the frequency error exceeds the tolerance
Summary: Ocotea board: ntpd complains that the frequency error exceeds the tolerance
Status: CLOSED CODE_FIX
Alias: None
Product: Platform Specific/Hardware
Classification: Unclassified
Component: PPC-32 (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Josh Boyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-12 05:41 UTC by Bart Van Assche
Modified: 2007-05-15 05:13 UTC (History)
0 users

See Also:
Kernel Version: 2.6.20.1
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Bart Van Assche 2007-03-12 05:41:38 UTC
Most recent kernel where this bug did *NOT* occur: probably never worked correctly.
Distribution: MontaVista Linux 4.0.1
Hardware Environment: AMCC's Ocotea board
Software Environment: MontaVista Linux 4.0.1 with mainline 2.6.20.1 kernel
Problem Description: ntpd complains that the frequency error exceeds the tolerance

Steps to reproduce:
- Boot an Ocotea board with the mainline 2.6.20.1 kernel.
- Create an /etc/ntp.conf file with at least one NTP server and iburst mode set.
- Issue the command "ntpd -g".
- Wait about two minutes.
- Verify ntpd's status via "ntpq -pn" and by looking in /var/log/ntp.

Patch that fixes this problem:

--- arch/ppc/platforms/4xx/ocotea.c.orig	2007-03-12 13:24:35.000000000 +0100
+++ arch/ppc/platforms/4xx/ocotea.c	2007-03-12 13:26:03.000000000 +0100
@@ -289,7 +289,7 @@
 	 * from FPGA, because it can be changed by on-board switches
 	 * --ebs
 	 */
-	ibm440gx_get_clocks(&clocks, 33333333, 6 * 1843200);
+	ibm440gx_get_clocks(&clocks, 33300000, 6 * 1843200);
 	ocp_sys_info.opb_bus_freq = clocks.opb;
 
 	/* Setup TODC access */
Comment 1 Josh Boyer 2007-05-15 05:12:38 UTC
This patch is now in the mainline kernel tree.
Comment 2 Josh Boyer 2007-05-15 05:13:34 UTC
This patch is in the mainline kernel tree.  Git commit id is:

0fbbeba2427a842a1a4ac9f379ca2ca37ea907eb

Thanks for the patch!

Note You need to log in before you can comment on or make changes to this bug.